--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
                         <a href="#email">malakhava@yahoo.com</a>
                     </li>
                     <li>
-                        <a href="#github">GitHub</a>
+                        <a href="https://github.com/malakhavam">GitHub</a>
                     </li>
                     <li>
-                        <a href="#linkedin">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/maryia-malakhava-ba50309b/">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="#instagram">Instagram</a>
+                        <a href="https://www.instagram.com/maryiaburaya/">Instagram</a>
                     </li>
                     <li>
-                        <a href="#Facebook">Facebook</a>
+                        <a href="https://www.facebook.com/mary.malahau">Facebook</a>
                     </li>
                 </ul>   
                 </nav>        
