--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="apps">
             <!--first app-->
             <article class="app">
-                <a href=https://malakhavam.github.io/run-buddy><img src="assets\images\hero-bg.jpg" alt=“Run-Buddy”></a>
+                <a href=https://malakhavam.github.io/run-buddy><img src="assets\Images\hero-bg.jpg" alt=“Run-Buddy”></a>
                 <section class="app-cont">
                     <h3>Run Buddy</h3>
                 </br>
@@ -79,7 +79,7 @@
 
             <!--third app-->
             <article class="app">
-                <a href="https://malakhavam.github.io/MyFan-Page"><img src="assets/images/Linkin-Park.jpg" alt="MyFan-Page" ></a>
+                <a href="https://malakhavam.github.io/MyFan-Page"><img src="assets/Images/Linkin-Park.jpg" alt="MyFan-Page" ></a>
                 <section class="app-cont">
                     <h3>Linkin Park</h3>
                 </br>
