working with images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="apps">
             <!--first app-->
             <article class="app">
-                <a href=https://malakhavam.github.io/run-buddy><img src="assets\Images\hero-bg.jpg" alt=“Run-Buddy”></a>
+                <a href=https://malakhavam.github.io/run-buddy><img src="assets/Images/hero-bg.jpg" alt=“Run-Buddy”></a>
                 <section class="app-cont">
                     <h3>Run Buddy</h3>
                 </br>
